# konstruktor

./: README.md  components.json  index.html  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: publish.yaml
repo/: channels.json
src/: App.tsx  CommandButton.tsx  Konstrukt.tsx  globals.css  main.tsx  style.css  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  fix_env.rs  main.rs
src/alerter/: AlerterDialog.tsx  alert-provider.tsx  alerter-context.tsx
src/beacon/: context.tsx  provider.tsx
src/channel/: channel-context.tsx  channel-provider.tsx
src/communication/: communication-context.tsx  communication-provider.tsx
src/components/: AppMenu.tsx  DashboardMenu.tsx  Error.tsx  FormikInput.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menubar.tsx  native-select.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  (+16 more)
src/fakts/: fakts-config.tsx  fakts-guard.tsx  fakts-provider.tsx  health-guard.tsx
src/health/: health-context.tsx  health-provider.tsx
src/hooks/: useCommand.tsx
src/interface/: context.tsx  provider.tsx
src/layout/: Hover.tsx  Page.tsx  ResponsiveGrid.tsx  hovercard.css
src/lib/: utils.ts
src/repo/: RepoSearcher.tsx  TestRepo.tsx  channels.json  repo-context.tsx  repo-provider.tsx
src/screens/: Dashboard.tsx  Health.tsx  Home.tsx  LogScreen.tsx  Settings.tsx
src/settings/: settings-context.tsx  settings-provider.tsx
src/storage/: storage-context.tsx  storage-provider.tsx
(+36 files in other folders)
